--- a/app/src/app/pokemon-detail/pokemon-detail.component.html
+++ b/app/src/app/pokemon-detail/pokemon-detail.component.html
@@ -1,6 +1,6 @@
-<div *ngIf="pokemon">
+<div class="pokemon-detail" *ngIf="pokemon">
   <h1>{{ pokemon.name }}</h1>
-  <img [src]="pokemon.sprites.front_default" alt="{{ pokemon.name }}" />
+  <img [src]="pokemon.sprites.front_default" alt="{{ pokemon.name }}">
   <p>Height: {{ pokemon.height }}</p>
   <p>Weight: {{ pokemon.weight }}</p>
   <p>Base Experience: {{ pokemon.base_experience }}</p>
