--- a/app/src/app/pokemon-list/pokemon-list.component.html
+++ b/app/src/app/pokemon-list/pokemon-list.component.html
@@ -1,4 +1,6 @@
-<div *ngFor="let pokemon of pokemons">
-  <a [routerLink]="['/pokemon', pokemon.name]">{{ pokemon.name }}</a>
+<div class="pokemon-list">
+  <div class="pokemon-item" *ngFor="let pokemon of pokemons">
+    <a [routerLink]="['/pokemon', pokemon.name]">{{ pokemon.name }}</a>
+  </div>
 </div>
-<button (click)="loadMore()">Load More</button>
+<button class="load-more" (click)="loadMore()">Load More</button>
